2009-11-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* filter.c, aprx.h, parse_aprs.c, Makefile.in:
	    Port Aprsc's filter code to Aprx.

	* debian/aprx.init, rpm/aprx.init:
	    Update Debian's version, sync the rpm's version

	* telemetry.c:
	    Report every 20 minutes, but scale values telling 10 minute
	    traffic.  Start sending telemetry PARM blocks from system
	    start.

	* aprx.c:
	    Init configurations before starting erlang accounting subsystem.

2009-11-02  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION 1.95

	* aprx.c:
	    Software tocall identity: APRX1B

	* telemetry.c:
	    Erlang reporting confusion fixed.

2009-10-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    More logging of interface setups.

	* beacon.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in
	    New type of beacon:  file  /path/to/file,  the first line
	    in given file is read every time this beacon entry is
	    executed, and the text is sent out sans line end LF.
	    There are no quote processing available.
	.
	    Validate latitude and longitude input, and complain if
	    validate failed.
	.
	    Beacon timefixing on all message types that support it,
	    and only upon special "timefix" option set on the beacon.
	.
	    Beacon construction from small parts supports 6 different
	    fundamental packet types with coordinates.

	* config.c:
	    Make config parser debugging needs  -ddd  runtime options.

	* telemetry.c:
	    Report higher of 10 minute integrated packet/byte counts in
	    the 20 minute account interval.  This makes graphs smoother.

2009-10-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, aprx.c, aprsis.c, beacon.c, netax25.c, ttyreader.c,
	  erlang.c, aprx-stat.c, igate.c:
	    Modify the printtime() to print millisecond resolution times.

2009-10-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c, config.c, aprx.h, aprx.conf.in, aprx-complex.conf.in,
	  aprx.8.in: